welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:7: error: not found: value lookingFor
		if (nums(i)== lookingFor){x=i}
                              ^