welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var x=0
	
	for (i <- 0 to nums.length-1) {


		if (nums(i)== lookingFor){x=i}
		else{x= -1}
	}
	x
}
